--- a/styles/body.css
+++ b/styles/body.css
@@ -25,6 +25,7 @@ p{
     margin-left: auto;
     margin-right: auto;
     width: 1000px;
+    margin-top: 40px;
   }
   #authorimg{
     width: 309px;
