--- a/styles/header.css
+++ b/styles/header.css
@@ -18,20 +18,27 @@
   .home{
     text-align:center;
     margin-top: 20px;
+    height: 40px;
+    vertical-align: middle;
+    position: relative;
+    bottom: 15px;
+    right: 18px;
   }
   .home img{
-    height: 50px;
+    height: 30px;
   }
   .outer {
         text-align: center;
         position:relative;
-        margin-bottom:25px;
-        margin-top:0px;
         border-bottom: black 1px solid;
+        background-color: lightblue;
+        margin: -10px;
   }
   .links{
         display: inline-block;
         margin: 5px;
+        position: relative;
+        top: 2px;
         
         
     }
